[update 26.1] Rebase Leaves-Plugin paper-patch